# Thesis_code

./: .gitignore  AUTHOR  CMakeLists.txt  CONFIG.h  LICENSE  POSSIBILE ORDINE ARGOMENTI TESI ESTESO.txt  POSSIBILE ORDINE ARGOMENTI TESI.txt  README.md  headers.h  library.h  root_include.h
codiciTesi/: 0T_autocorr_check.cpp  0T_ff.cpp  0Tfile_visual_monte_carlo_history.cpp  2nd_susceptibility_with_errors.cpp  CMakeLists.txt  README.md  analysis_rhok_vs_T.cpp  analysis_rhok_vs_T_fit.cpp  autocorr_check.cpp  autocorr_check_rhok.cpp  autocorr_check_simpler_files.cpp  cluster_lenght.cpp  cluster_lenght_double_from_file.cpp  cluster_lenght_fit.cpp  converter_into_obs.cpp  correction_confid.cpp  dependent_data_analysis_autocorrelation_calculated.cpp  ff_beta_0andT.cpp  fit_muT.cpp  fit_polyffT.cpp  poly.cpp  polyff.cpp  rho_vs_T.cpp  simple_computation.cpp  simple_rendering.cpp  susceptibility_with_errors.cpp  temperature_compute.cpp  visual_autocorrelation.cpp  visual_monte_carlo_history.cpp  visual_polyffT.cpp  visual_reff_subtract0T.cpp  visual_susceptibility_polyff.cpp  visual_susceptibility_with_errors.cpp
